--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <section class="container my-5">
         <div class=" p-2 row">
-            <div class="col d-flex flex-column gap-4 p-4" style="background-color: var(--background-color);">
+            <div class="col-lg d-flex flex-column gap-4 p-4" style="background-color: var(--background-color);">
                 <div class="bg-white d-flex flex-row justify-content-center align-items-center gap-2 p-3 rounded-4 ">
                     <div class="rounded-circle col-2 text-center d-flex justify-content-center align-items-center"
                         style="background-color: #C7EAFB; border-color: #DFF3FD; height: 70px; width: 70px; margin: auto;">
@@ -112,7 +112,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col p-4">
+            <div class="col-lg p-4">
                 <h2>Savoir plus sur les fonctionnalités clés de winmed</h2>
                 <p class="lh-lg  " style="color: var(--text-light-gray-color)">Explorez ces fonctionnalités avancées et
                     faites évoluer la gestion de votre cabinet médical avec notre produit. Profitez de ces outils
@@ -130,7 +130,7 @@
     <section class="container my-5">
         <div class="reverse row p-2">
 
-            <div class="col p-4">
+            <div class="col-lg p-4">
                 <h2>Gardez un œil sur les performances de votre Cabinet</h2>
                 <p class="lh-lg  " style="color: var(--text-light-gray-color)">Suivre et d'analyser des données clés
                     telles que le nombre de consultations, les revenus générés, la fréquence des rendez-vous, et bien
@@ -138,7 +138,7 @@
                     optimiser votre pratique médicale.</p>
             </div>
 
-            <div class="col d-flex flex-column justify-content-between gap-4 p-4"
+            <div class="col-lg d-flex flex-column justify-content-between gap-4 p-4"
                 style="background-color: var(--background-color);">
                 <div class="bg-white d-flex flex-row-reverse  justify-content-center align-items-center gap-2 p-2 rounded-4 align-self-end "
                     style="width: 70%;;">
@@ -205,7 +205,7 @@
             <div class="rounded-3 w-auto p-2" style="background-color: var(--dark-gray);">Annuel</div>
         </div>
         <div class="row gap-2 my-3">
-            <div class=" col-sm rounded-2 border p-4 d-flex flex-column gap-2  "
+            <div class=" col-md rounded-2 border p-4 d-flex flex-column gap-2  "
                 style="border-color: var(--dark-gray);">
                 <h5 class="fw-medium " style="font-size: 29px;">Basic</h5>
                 <h6 class="fw-semibold " style="font-size: 26px;">Gratuit/mois</h6>
@@ -246,7 +246,7 @@
                 </div>
 
             </div>
-            <div class=" col-sm rounded-2 border p-4 d-flex flex-column gap-2  "
+            <div class=" col-md rounded-2 border p-4 d-flex flex-column gap-2  "
                 style="border-color: var(--dark-gray); background-color: #C7EAFB;">
                 <div>
                     <p class="w-auto badge p-2  " style="background-color: var(--page-secondary-color);">Populaire</p>
@@ -292,7 +292,7 @@
                 </div>
 
             </div>
-            <div class=" col-sm rounded-2 border p-4 d-flex flex-column gap-2  "
+            <div class=" col-md rounded-2 border p-4 d-flex flex-column gap-2  "
                 style="border-color: var(--dark-gray);">
                 <h5 class="fw-medium " style="font-size: 29px;">Premium</h5>
                 <h6 class="fw-semibold " style="font-size: 26px;">900 DH/mois</h6>
